--- a/MapsDemo.html
+++ b/MapsDemo.html
@@ -21,21 +21,40 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKQHcshXFHbzDF1MDXA3DAgUM9SWCulRA&sensor=true">
     </script>
     <script type="text/javascript">
+
+        var map;
+        var markers = [];
+
       function initialize() {
         var mapOptions = {
           center: new google.maps.LatLng(38.033499, -78.508964),
           zoom: 16
         };
-        var map = new google.maps.Map(document.getElementById("map-canvas"),
+        map = new google.maps.Map(document.getElementById("map-canvas"),
             mapOptions);
 			
-		var marker = new google.maps.Marker({
-			position: new google.maps.LatLng(38.031628, -78.510946),
-			title:"Hello World!"
-		});
-		marker.setMap(map);
+		//var marker = new google.maps.Marker({
+		//	position: new google.maps.LatLng(38.031628, -78.510946),
+		//	title:"Hello World!"
+		//});
+		//marker.setMap(map);
       }
       google.maps.event.addDomListener(window, 'load', initialize);
+
+      function setMarker(lat, lng, name) {
+          var marker = new google.maps.Marker({
+			position: new google.maps.LatLng(lat, lng),
+			title: name,
+			map: map
+		  });
+          markers.push(marker);
+      }
+      function deleteMarkers() {
+        for (var i = 0; i < markers.length; i++) {
+            markers[i].setMap(null);
+        }
+        markers = [];
+      }
 	  
 	  //deprecated...
 		function processForm(form) {
@@ -47,6 +66,9 @@
 		function getString(str) {
 			//called from the form: prompts with newly inputted string from user
 			alert(str);
+			//if (str == "1") { setMarker(38.031628, -78.510946, '1'); }
+			//if (str == "2") { setMarker(38.033285, -78.509668, '2'); }
+			//if (str == "3") { deleteMarkers(); }
 		}
 
     </script>
